# corewar

./: .gitignore  Makefile
asm/: Makefile  array_list.c  array_list_access.c  asm_parse.h  command_info.c  command_to_bytecode.c  ft_asm_abodnar.h  ft_asm_labels_matching.c  ft_asm_regex_add.c  ft_asm_regex_aff.c  ft_asm_regex_and.c  ft_asm_regex_champ_comment.c  ft_asm_regex_champ_name.c  ft_asm_regex_empty_line.c  ft_asm_regex_fork.c  ft_asm_regex_ld.c  ft_asm_regex_ldi.c  ft_asm_regex_lfork.c  ft_asm_regex_live.c  ft_asm_regex_st.c  ft_asm_regex_sti.c  ft_asm_regex_zjmp.c  ft_asm_valid.c  main.c  op.h  parse_command.c  parse_element.c
asm/ab_arr_list/: ft_ab_arr_list.c  ft_ab_arr_list.h
champs/: ab.s
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_count_symb.c  ft_count_words.c  ft_isnumber.c  ft_itoa.c  ft_itoa_base.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strsplit.c  ft_utoa.c  ft_utoa_base.c  get_next_line.c  libft.h
src/: CMakeLists.txt
src/asm/: array_list.c  array_list.h  array_list_access.c  asm_parse.c  asm_parse.h  command.c  command_from_string.c  command_info.c  main.c  op.h  parse_command.c  parse_element.c
vm/: Makefile
vm/src/: ft_add.c  main.c  move_proc.cpp  op.c  op.h  vm.h
vm_champs/champs/: Backward.cor  Backward.s  ex.cor  ex.s  tdc3.cor  tdc3.s  test.s
