cmake_minimum_required(VERSION 3.9)
project(src)

set(CMAKE_CXX_STANDARD 11)

add_executable(src
        asm/array_list.c
        asm/array_list.h
        asm/asm_parse.c
        asm/asm_parse.h
        asm/main.c
        asm/op.h
        libft/gnl_src/get_next_line.c
        libft/gnl_src/get_next_line.h
        libft/libsrc/ft_atoi.c
        libft/libsrc/ft_bzero.c
        libft/libsrc/ft_cos.c
        libft/libsrc/ft_factorial.c
        libft/libsrc/ft_isalnum.c
        libft/libsrc/ft_isalpha.c
        libft/libsrc/ft_isascii.c
        libft/libsrc/ft_isdigit.c
        libft/libsrc/ft_isprint.c
        libft/libsrc/ft_itoa.c
        libft/libsrc/ft_lstadd.c
        libft/libsrc/ft_lstaddlast.c
        libft/libsrc/ft_lstdel.c
        libft/libsrc/ft_lstdelone.c
        libft/libsrc/ft_lstiter.c
        libft/libsrc/ft_lstmap.c
        libft/libsrc/ft_lstnew.c
        libft/libsrc/ft_memalloc.c
        libft/libsrc/ft_memccpy.c
        libft/libsrc/ft_memchr.c
        libft/libsrc/ft_memcmp.c
        libft/libsrc/ft_memcpy.c
        libft/libsrc/ft_memdel.c
        libft/libsrc/ft_memmove.c
        libft/libsrc/ft_memset.c
        libft/libsrc/ft_power.c
        libft/libsrc/ft_putchar.c
        libft/libsrc/ft_putchar_fd.c
        libft/libsrc/ft_putendl.c
        libft/libsrc/ft_putendl_fd.c
        libft/libsrc/ft_putnbr.c
        libft/libsrc/ft_putnbr_fd.c
        libft/libsrc/ft_putstr.c
        libft/libsrc/ft_putstr_fd.c
        libft/libsrc/ft_sin.c
        libft/libsrc/ft_split_whitespaces.c
        libft/libsrc/ft_strcat.c
        libft/libsrc/ft_strchr.c
        libft/libsrc/ft_strclr.c
        libft/libsrc/ft_strcmp.c
        libft/libsrc/ft_strcpy.c
        libft/libsrc/ft_strdel.c
        libft/libsrc/ft_strdup.c
        libft/libsrc/ft_strequ.c
        libft/libsrc/ft_striter.c
        libft/libsrc/ft_striteri.c
        libft/libsrc/ft_strjoin.c
        libft/libsrc/ft_strlcat.c
        libft/libsrc/ft_strlen.c
        libft/libsrc/ft_strmap.c
        libft/libsrc/ft_strmapi.c
        libft/libsrc/ft_strncat.c
        libft/libsrc/ft_strncmp.c
        libft/libsrc/ft_strncpy.c
        libft/libsrc/ft_strnequ.c
        libft/libsrc/ft_strnew.c
        libft/libsrc/ft_strnstr.c
        libft/libsrc/ft_strrchr.c
        libft/libsrc/ft_strsplit.c
        libft/libsrc/ft_strstr.c
        libft/libsrc/ft_strsub.c
        libft/libsrc/ft_strtrim.c
        libft/libsrc/ft_tolower.c
        libft/libsrc/ft_toupper.c
        libft/libsrc/libft.h
        libft/libft.h asm/parse_element.c asm/parse_command.c asm/command_from_string.c)
